--- a/tex/kap-reglemente.tex
+++ b/tex/kap-reglemente.tex
@@ -2,31 +2,31 @@
 % !TeX spellcheck = sv_SE
 \chapter{Reglemente}
 
-Vi tittar på reglementen kring användning av radiofrekvenser och
-utrustning inom Sverige och vilka myndigheter och lagar som styr
-detta. Vi går vidare med PR-radio och amatörradio och det fortfarande
-ganska nya instegscertifikatet i detta kapitel.
+Vi tittar på reglementen kring användning av radiofrekvenser och utrustning
+inom Sverige och vilka myndigheter och lagar som styr detta. Vi går vidare med
+PR-radio och amatörradio och det fortfarande ganska nya instegscertifikatet i
+detta kapitel.
 
 \clearpage
 
 \section{Tillståndsfri radio}
 
 I sverige regleras radioanvändningen av Post- och telestyrelsens (PTS)
-bestämmelser och det gäller all radioanvändning. Delar av detta
-delegeras sedan till olika myndigheter exempelvis för marin radio och
-flygradio. Själva utrustningen som får användas för olika typer av
-radiosändning regleras i radioutrustningslagen SFS 2916:392 och det
-övergripande EU-direktivet 2014/53/EU.
+bestämmelser och det gäller all radioanvändning. Delar av detta delegeras
+sedan till olika myndigheter exempelvis för marin radio och flygradio. Själva
+utrustningen som får användas för olika typer av radiosändning regleras i
+radioutrustningslagen SFS 2916:392 och det övergripande EU-direktivet
+2014/53/EU.
 
 
 Det är i undantagsföreskriften du hittar alla villkor som hänger samman med
-tillståndsfri radiosändning. Här står effekter, modulationstyper och
+tillståndsfri radio\-sänd\-ning. Här står effekter, modulationstyper och
 användningsområden upptagna för respektive frekvens samt andra villkor.
 
 Det är också i denna skrift som användningen av Amatörradio regleras rent
 juridiskt. Sedan finns inte alla rekommendationer och liknande med i denna
-skrift, här får man själv hitta det reglemente som amatörradioorganisationer mm
-kommit överens om hur man ska nyttja de olika bandet.
+skrift, här får man själv hitta det reglemente som amatörradioorganisationer
+mm kommit överens om hur man ska nyttja de olika bandet.
 
 Det innebär att radioanvändning för diverse ändamål regleras i denna skrift så
 som:
@@ -153,7 +153,7 @@ stället en signal i SA-serien är tanken.
 \caption{Amatörradioband öppna för instegscertifikat i Ssverige}
 \end{table}
 
-50\,MHz är egentligen ett VHF-band men räknas ofta till kortvåg (HF) då de
+50\,MHz är egentligen ett VHF-band men räknas ibland till kortvåg (HF) då de
 flesta amatörradiostationer för kortvåg omfattar även 6\,m-bandet.
 
 Myndigheterna har gett instegscertare tillträde till amatörradioband som är
