--- a/tex/kap-trafik.tex
+++ b/tex/kap-trafik.tex
@@ -331,7 +331,7 @@ Det finns förstås många fler koder men detta anses som de vanligaste.
 	    & Rätt tid är ...                                                      \\
 \end{longtable}
 
-\subsection{Lokator}
+\subsection{Lokator}\label{sec:lokator}
 
 Lokator (Maidenhead locator) är ett praktiskt sätt att tala om sin ungefärliga
 position genom att ange endast sex stycken tecken. En lokator kan t.ex. se ut
@@ -508,12 +508,21 @@ sänd sedan!
 
 \section{Morsekoden}
 
-I dag används telegrafi ytterst sällan i kommersiella sammanhang, en
-gång i tiden var det dock det helt dominerande trafikslaget. I dag är
-det foni eller digitala sändningsmoder som gäller. Men radioamatörer
-använder morse, eller CW som det kallas (Continuous Wave) eftersom det
-bara är en nycklad bärvåg som sänds.
+I dag används telegrafi ytterst sällan i kommersiella sammanhang, en gång i
+tiden var det dock det helt dominerande trafikslaget. I dag är det foni eller
+digitala sändningsmoder som gäller. Men radioamatörer använder morse, eller CW
+som det även kallas (Continuous Wave) eftersom det bara är en nycklad bärvåg
+som sänds.
 
+\subsection{Bandbredd för morse}
+
+Den stora fördelen med morsesignalering är att bandbreden blir mycket låg och
+därmed blir hörbarheten också god även i en miljö med störningar. Genom att
+hålla nere nycklingstakten och stigtiden på den nycklade bärvågen kan man
+komma ner runt 50\,Hz bandbredd vilket är mycket bra.
+
+
+\subsection{Svenska morsealfabetet med specialtecken}
 Här kommer en sammanställning av den morse-kod som lärts ut i
 generationer inom det militära för signalister.
 
