--- a/tex/forord.tex
+++ b/tex/forord.tex
@@ -3,6 +3,13 @@
 
 \section*{Förord}
 
+Jag heter Täpp Anders Sikvall och har haft ett radiointresse sedan barnsben.
+När jag gick i gymnasiet tog jag amatörradiolicens efter dåtidens regler och
+har sedan haft amatörradio som en hobby. Jag jobbar också professionellt med
+radiosystem och på fritiden tycker jag om att gå i skog och mark (och köra
+portabelt). Jag utbildar också nya radioamatörer och är även en av SSA:s
+provförrättare.
+
 Denna version av radiohandboken innehåller en stor mängt förändringar mot
 tidigare versioner. Dels har jag valt att ta bort de specifika VHF- och
 HF-versionerna av den och i stället bara inkludera allting i samma handbok för
@@ -27,54 +34,35 @@ Många frekvenslistor har blivit uppdaterade med nya frekvenser, information
 och kanaler, felaktigheter har korrigerats och jag hoppas att det mesta nu
 faktiskt är ganska korrekt!
 
+Till sist ett stort tack till alla som hjälpt till med förslag och korrektur
+och annat. Ovärderligt. Fortsätt med det!
+
 \url{https://sikvall.se}
 
 Och kör radio där ute. Alltid med stil.
 
 \vspace{4mm}
 
-Karlholm, \DokumentDatum\\
-\textit{Täpp-Anders Sikvall\\
-	SM5UEI}
+\noindent Karlholm, \DokumentDatum\\
+Täpp-Anders Sikvall\\
+	SM5UEI
 
-\section*{Om författaren}
-
-Jag heter Täpp Anders Sikvall och har haft ett radiointresse sedan
-barnsben. När jag gick i gymnasiet tog jag amatörradiolicens efter dåtidens
-regler och har sedan haft amatörradio som en hobby.
-
-Jag jobbar också professionellt med radiosystem och på fritiden tycker jag om
-att gå i skog och mark (och köra portabelt). Jag utbildar också nya
-radioamatörer och är även en av SSA:s provförrättare.
+\vspace{\fill}
 
 \section*{Licens}
 
-Denna handbok är författad av Täpp Anders Sikvall, SM5UEI. Den är
+Denna handbok är författad av Täpp-Anders Sikvall, SM5UEI. Den är
 släppt under en creative commons licens som kallas för CC BY-NC-SA.
 
-I korthet innebär det att du får distribuera och trycka upp materialet
-hur du vill, dela med dig av det men inte för kommersiella ändamål. Du
-får dessutom använda materialet i dina egna alster men om du gör det
-ska du släppa dessa under samma licens. Mitt namn ska stå kvar i
-originalet och om du använder det i ett annat verk ska det vara
-tydligt att det är ett derivat.
+%I korthet innebär det att du får distribuera och trycka upp materialet
+%hur du vill, dela med dig av det men inte för kommersiella ändamål. Du
+%får dessutom använda materialet i dina egna alster men om du gör det
+%ska du släppa dessa under samma licens. Mitt namn ska stå kvar i
+%originalet och om du använder det i ett annat verk ska det vara
+%tydligt att det är ett derivat.
 
 För fullständig information kan du besöka\\
 \url{https://creativecommons.org/licenses/by-nc-sa/4.0/deed.sv}
 
 Licensen gäller alla versioner av radiohandboken, alla utgåvor och
 alla utdrag ur den.
-
-\clearpage
-
-\section*{Nyheter i denna utgåva}
-
-\begin{itemize}
-  \item Licensvillkoren för verket är uppdaterade
-  \item Om författaren tillagt
-  \item Mer om kommersiell radio och myndighetsradio tillagt liksom information om
-  \item undantag från tillståndsplikt
-\end{itemize}
-\todo{Fyll i vad som ändrats sedan sist}
-
-\clearpage
